<resources>
    <string name="app_name">Agreement</string>
    <string name="database_name">agreements-db</string>
    <string name="app_title">KAMI: Agreement</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_login">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_connection">Connection failure</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="remember_password">Remember me</string>
    <string name="error_login_label">Incorrect login or password</string>
    <string name="requestNumber">Number</string>
    <string name="paymentDate">Payment date</string>
    <string name="requestDate">Request date</string>
    <string name="description">Description</string>
    <string name="client">Client</string>
    <string name="sum">Sum</string>
    <string name="author">Author</string>
    <string name="autologin">Auto login</string>
    <string name="use_qr_code">Use QR-Code</string>
    <string name="dialog_confirm_approve">Confirm action?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="commentary">Commentary</string>
    <string name="about">About</string>
    <string name="authorization">Autorization</string>
    <string name="money">Money</string>
    <string name="money_title">Money</string>
    <string name="money_title_item">Money </string>
    <string name="Service">Service</string>
    <string name="service_title">Service</string>
    <string name="service_title_item">Service</string>
    <string name="department">Department</string>
    <string name="service_department">Serv. department</string>
    <string name="warehouse_sender">Warehouse sender</string>
    <string name="sender_address">Sender address</string>
    <string name="Delivery">Delivery</string>
    <string name="delivery_title">Delivery</string>
    <string name="delivery_title_item">Delivery</string>
    <string name="action_search">Search</string>
    <string name="copyright">©2020 - KAMI-Group</string>
    <string name="version">Version</string>
    <string name="authorization_successful">Authorization successful</string>
    <string name="approval_comment">Approval comment</string>
    <string name="empty_list_message">NO DATA</string>
    <string name="kami_logo">Kami Logo</string>
    <string name="about_agreement_app">About Agreement app</string>
    <string name="success_approve_decline_toast_message">Request successfully %s.</string>
    <string name="approve_decline_error_toast">Approval error!</string>
    <string name="approved">approved</string>
    <string name="declined">declined</string>
    <string name="selected">Selected:</string>
    <string name="action_clear">clear selections</string>
    <string name="action_approve_selected">approve selected</string>
</resources>
