<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@id/requestListFragment"
        android:icon="@drawable/payment_icon"
        android:title="@string/money" />
    <item
        android:id="@id/serviceRequestListFragment"
        android:icon="@drawable/service_icon"
        android:title="@string/Service" />
    <item
        android:id="@id/deliveryRequestListFragment"
        android:icon="@drawable/delivery_icon"
        android:title="@string/Delivery" />

    <group android:id="@+id/group1">
        <item
            android:id="@+id/loginActivity"
            android:icon="@drawable/login_icon"
            android:title="@string/authorization" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/info_icon"
            android:title="@string/about" />
    </group>
</menu>